--- a/DotaceLoader/packages.config
+++ b/DotaceLoader/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="2.0.35" targetFramework="net472" />
+  <package id="Dapper" version="2.0.78" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Core" version="2.1.8" targetFramework="net48" />
   <package id="Devmasters.Crypto" version="2.1.0" targetFramework="net48" />
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
-  <package id="log4net" version="2.0.11" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
+  <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Npgsql" version="4.1.4" targetFramework="net472" />
+  <package id="Npgsql" version="5.0.1.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
@@ -23,6 +23,7 @@
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net472" />
   <package id="System.Text.Json" version="4.7.2" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="4.7.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
