--- a/Plugin.TransparetniUcty/packages.config
+++ b/Plugin.TransparetniUcty/packages.config
@@ -6,22 +6,23 @@
   <package id="Devmasters.Logging" version="2.1.1" targetFramework="net48" />
   <package id="Devmasters.Net" version="2.1.4" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
-  <package id="EPPlus" version="5.2.1" targetFramework="net472" />
+  <package id="EPPlus" version="5.4.2" targetFramework="net48" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
-  <package id="IPNetwork2" version="2.5.226" targetFramework="net48" />
-  <package id="log4net" version="2.0.11" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.240" targetFramework="net48" />
+  <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
   <package id="NEST" version="7.8.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
