--- a/Web.Statu/packages.config
+++ b/Web.Statu/packages.config
@@ -7,7 +7,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
   <package id="CouchbaseNetClient" version="2.7.22" targetFramework="net48" />
-  <package id="CsvHelper" version="15.0.5" targetFramework="net472" />
+  <package id="CsvHelper" version="18.0.0" targetFramework="net48" />
   <package id="Devmasters.Batch" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Cache" version="2.1.2" targetFramework="net48" />
   <package id="Devmasters.Cache.Couchbase" version="2.0.1" targetFramework="net48" />
@@ -24,13 +24,13 @@
   <package id="EasyNetQ" version="5.6.0" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.8.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
-  <package id="EPPlus" version="5.2.1" targetFramework="net472" />
+  <package id="EPPlus" version="5.4.2" targetFramework="net48" />
   <package id="HlidacStatu.Api.Dataset.Connector" version="1.3.3" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net472" />
-  <package id="IPNetwork2" version="2.5.226" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
+  <package id="IPNetwork2" version="2.5.240" targetFramework="net48" />
   <package id="jQuery" version="3.5.1" targetFramework="net472" />
-  <package id="jQuery.Validation" version="1.19.1" targetFramework="net472" />
-  <package id="log4net" version="2.0.11" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.19.2" targetFramework="net48" />
+  <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="Microsoft.ApplicationInsights" version="2.14.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.14.0" targetFramework="net472" />
@@ -68,19 +68,19 @@
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
-  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Cookies" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Facebook" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Google" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.OAuth" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft.Owin.Security.Twitter" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="net48" />
+  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Google" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.1" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Twitter" version="4.1.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Moment.js" version="2.27.0" targetFramework="net472" />
+  <package id="Moment.js" version="2.29.1" targetFramework="net48" />
   <package id="NEST" version="7.8.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
@@ -90,10 +90,11 @@
   <package id="RabbitMQ.Client" version="6.2.1" targetFramework="net48" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
-  <package id="SharpZipLib" version="1.3.0" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net48" />
@@ -118,12 +119,12 @@
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net472" />
-  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net48" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net472" />
-  <package id="System.Runtime.Handles" version="4.0.0" targetFramework="net48" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net472" />
@@ -135,13 +136,13 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Security.Permissions" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
-  <package id="System.Text.Encoding" version="4.0.10" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Channels" version="4.7.1" targetFramework="net472" />
-  <package id="System.Threading.Tasks" version="4.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net472" />
